--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "jsa",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "json synchronization service",  
   "author": {
     "name": "Enric Cecilla",
-    "email": "ececilla@gmail.com",
-    "url":  "http://jsa-waver.rhcloud.com/"
+    "email": "ececilla@gmail.com"
   },
-  "homepage": "http://jsa-waver.rhcloud.com/",
+  "homepage": "https://github.com/ececilla/jsa",
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
