--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsa",
-  "version": "0.0.22",
+  "version": "0.0.22-1",
   "description": "json synchronization service", 
   "keywords":["synchronization","rpc"],	 
   "author": {
