--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	"redis":"0.8.x",
 	"colors":"0.6.x",
 	"prettyjson":"0.7.x",
-	"underscore":"1.4.x"
+	"underscore":"1.4.x",
+	"log4js":"0.6.x"
   },
   "devDependencies":{
  	"nodeunit":"0.7.x",	
