--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prettyjson":"0.7.x",
     "underscore":"1.4.x",
     "log4js":"0.6.x",
-    "connect":"latest"
+    "connect":"latest",
+    "supertest":"latest"	
   },
   "devDependencies":{
     "nodeunit":"0.7.x",
